Solve the alignment issue that occurs on xl and bigger screens

--- a/src/components/FeaturedProject/index.scss
+++ b/src/components/FeaturedProject/index.scss
@@ -68,6 +68,7 @@
             div:last-child {
                 a {
                     display: inline-block;
+                    width: 100%;
                     
                     @media screen and (max-width: $lg - 1px) {
                         width: 67%;
@@ -77,6 +78,7 @@
                     }
 
                     img {
+                        width: 100%;
                         border-radius: 25px;
                         filter: brightness(80%);
                         max-height: 330px;
